--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "Svelte with TypeScript and SCSS using Webpack",
   "scripts": {
-    "start": "webpack serve --mode development",
-    "build": "webpack --mode production",
+    "start": "webpack serve",
+    "build": "webpack",
     "dev": "webpack-dev-server"
   },
   "dependencies": {
@@ -16,6 +16,7 @@
     "@types/node": "^20.12.6",
     "@types/webpack": "^5.28.5",
     "css-loader": "^6.5.0",
+    "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.8.1",
     "sass": "^1.50.0",
     "sass-loader": "^12.4.0",
