feat: 通过autoprefixer 增加浏览器前缀从而增加css 代码的健壮性

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "webpack-dev-server"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.19",
     "scss": "^0.2.4",
     "svelte": "^4.2.12",
     "typescript": "^5.4.4"
